[package]
name = "bg3_save_cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bg3sc" # bg3sc = baulders gate three save cleaner
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
