[package]
name = "bg3_save_cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bg3sc" # bg3sc = baulders gate three save cleaner
path = "src/main.rs"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
